<resources>
    <string name="app_name">Book App</string>
    <string name="Shaimaa_Masarwi">Shaimaa Masarwi</string>
    <string name="edittexttextemailaddress">editTextTextEmailAddress</string>
    <string name="edittexttextpassword">editTextTextPassword</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="plus">+</string>
    <string name="minos">-</string>
    <string name="result">result</string>
    <string name="edittextnumber">editTextNumber</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">login</string>
    <string name="register">register</string>
    <string name="channel_name">channelname</string>
    <string name="channel_description">welcome !</string>
    <string name="kids">Kids</string>
    <string name="ficition">ficition</string>
    <string name="health">Health</string>
    <string name="history_past">history (past)</string>
    <string name="fiction">fiction</string>
</resources>