<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2home"
    android:background="@drawable/wallpaper2"
    >


    <Button
        android:id="@+id/button3"
        android:layout_width="255dp"
        android:layout_height="94dp"
        android:background="@drawable/btn_bg"
        android:text="@string/kids"
        android:textColor="@color/orange"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.144"
        app:rippleColor="@color/red"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button4"
        android:layout_width="251dp"
        android:layout_height="94dp"
        android:background="@drawable/btn_bg"
        android:text="@string/fiction"
        android:textColor="@color/orange"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257" />

    <Button
        android:id="@+id/button8"
        android:layout_width="246dp"
        android:layout_height="93dp"
        android:background="@drawable/btn_bg"
        android:text="@string/health"

        android:textColor="@color/orange"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.178" />

    <Button
        android:id="@+id/button9"
        android:layout_width="256dp"
        android:layout_height="96dp"
        android:background="@drawable/btn_bg"
        android:text="@string/history_past"
        android:textColor="@color/orange"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="270dp"
        android:layout_height="41dp"
        android:text="Pick a category :"
        android:textColor="@color/brown"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />


</androidx.constraintlayout.widget.ConstraintLayout>

